@@ -1,5 +1,9 @@
 2003/12/30 10:12 (-0500) rwmcfa1
 
+	* GenPod.pm, MakeHelper.pm, Subclass.pm: added version numbers
+
+2003/12/30 10:12 (-0500) rwmcfa1
+
 	* MakeHelper.pm: moved the const_cccmd to the bottom of the file so 
 	that the first package isn't MY (caused issues with CPAN and generally
 	wasn't a good idea.) Also converted the comment about it into a pod 
